--- a/book/pom.xml
+++ b/book/pom.xml
@@ -66,7 +66,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 				<groupId>org.apache.maven.plugins</groupId><artifactId>maven-dependency-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>unpack-books-1.0.xsd</id><phase>prepare-package</phase><goals><goal>unpack</goal></goals>
+						<id>unpack-books-1.0.xsd</id><phase>generate-resources</phase><goals><goal>unpack</goal></goals>
 						<configuration>
 							<artifactItems>
 								<artifactItem>
@@ -83,7 +83,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 				<groupId>org.apache.maven.plugins</groupId><artifactId>maven-resources-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>copy-books-1.0.xsd</id><phase>prepare-package</phase><goals><goal>copy-resources</goal></goals>
+						<id>copy-books-1.0.xsd</id><phase>generate-resources</phase><goals><goal>copy-resources</goal></goals>
 						<configuration>
 							<resources>
 								<resource>
@@ -94,23 +94,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 								</resource>
 							</resources>
 							<!-- Put into META-INF/resources to be accessible as website content when jar included in WEB-INF/lib -->
-							<outputDirectory>${project.build.outputDirectory}/META-INF/resources/core/servlet</outputDirectory>
-						</configuration>
-					</execution>
-					<!-- Create a second copy in the resource directory used by maven-bundle-plugin -->
-					<execution>
-						<id>copy-books-1.0.xsd-bundle</id><phase>prepare-package</phase><goals><goal>copy-resources</goal></goals>
-						<configuration>
-							<resources>
-								<resource>
-									<directory>${project.build.directory}/dependency/com/semanticcms/core/servlet</directory>
-									<includes>
-										<include>books-1.0.xsd</include>
-									</includes>
-								</resource>
-							</resources>
-							<!-- Put into META-INF/resources to be accessible as website content when jar included in WEB-INF/lib -->
-							<outputDirectory>${project.build.directory}/resources-filtered/META-INF/resources/core/servlet</outputDirectory>
+							<outputDirectory>${project.build.directory}/generated-resources/META-INF/resources/core/servlet</outputDirectory>
 						</configuration>
 					</execution>
 				</executions>
