--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<relativePath>../../parent/pom.xml</relativePath>
 	</parent>
 
-	<groupId>com.semanticcms</groupId><artifactId>semanticcms-core-servlet</artifactId><version>1.15.1-SNAPSHOT</version>
+	<groupId>com.semanticcms</groupId><artifactId>semanticcms-core-servlet</artifactId><version>1.15.1</version>
 	<packaging>bundle</packaging>
 
 	<properties>
@@ -50,7 +50,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<connection>scm:git:git://github.com/aoindustries/semanticcms-core-servlet.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/semanticcms-core-servlet.git</developerConnection>
 		<url>https://github.com/aoindustries/semanticcms-core-servlet</url>
-		<tag>HEAD</tag>
+		<tag>semanticcms-core-servlet-1.15.1</tag>
 	</scm>
 
 	<issueManagement>
